syntax = "proto3";
option go_package = "gitlab.com/shar-workflow/shar/model";

//import "google/protobuf/timestamp.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/any.proto";

// Workflow describes a number of processes that interact together.  It also contains all messages and errors used by the processes.
message Workflow {
  string name = 1; // Name defines the common name that describes the workflow.
  map<string, Process> process = 2; // Process is a map of process names to workflow state machines.
  repeated Element messages = 3; // Messages define the messages that can be sent by the workflow.
  repeated Error errors = 4; // Errors define the errors used by the workflow.
  bytes gzipSource = 5; // Source for round tripping.
}

message Metadata {
  bool timedStart = 1; // Workflow contains timed start activities that can trigger a process.
}

// Process describes a single workflow state machine.
message Process {
  repeated Element elements = 1; // Elements describes each state in the state machine.
  string Name = 2; // Name - the common name of the state machine.
  optional Metadata metadata = 6; // Metadata created by SHAR to describe process behavior.
}

// WorkflowVersions describes the version history.
message WorkflowVersions {
  repeated WorkflowVersion version = 1; // WorkflowVersion - a single version of a workflow
}

// WorkflowVersion contains the metadata for a single workflow version
message WorkflowVersion {
  string id = 1; // Id - the launchable ID for the workflow.
  bytes sha256 = 2; // Sha256 - the hash of the workflow configuration.
  int32 number = 3; // Number - the version number of the workflow
}

// Element describes a single state machine state.
message Element {
  string id = 1; // Id - the unique identifier for the workflow state machine element.
  string name = 2; // Name - the name of the state machine element.
  string type = 3; // Type - the type of state machine element
  string documentation = 4; // Documentation - any documentation describing the state machine element.
  string execute = 5;  // Execute - describes the execution parameter,  This is used for diffrerent purposes depending on the type.
  Targets outbound = 6; // Outbound - a number of possible transitions to other state machine state elements.s
  Process process = 7; // Process - defines any subprocesses contained within this state machine.
  string msg = 8; // TODO: Document
  string retries = 9; // Retries - how many times this state machine element should retry in the case of a non-workflow error.
  string candidates = 10; // Candidates - used for user related state machgine types to define users that may complete the task.
  string candidateGroups = 11; // CandidateGroups - used for user related state machine types to define groups that may complete a task.
  repeated CatchError errors = 12; // Errors - a number of catchable errors for this state machine element.
  Error error = 13; // Error - an error that may be thrown.
  map<string, string> inputTransform = 14; // InputTransform - a transformation to poerform between variable names when calling a state machine task.
  map<string, string> outputTransform = 15; // OutputTransform - a transformation to poerform between variable names when exiting a state machine task.
  WorkflowTimerDefinition timer = 16; // Timer - a time to wait before execution for timer tasks.
  repeated Timer boundaryTimer = 17; // BoundaryTimer - a number of timed transitions between this and another state.
  optional GatewaySpec gateway = 18; // GatewaySpec - if this element is a gateway, this contains the type specification for it.
  optional Iteration iteration = 19; // Iteration - gives any instructions for multi instance execution.
}

enum ThreadingType {
  Sequential = 0;
  Parallel = 2;
}

message Iteration {
  string collection = 1;
  string iterator = 2;
  string collateAs = 3;
  string collateFrom = 4;
  optional string until = 5;
  ThreadingType execute = 6;
}

message Iterator {
  string id = 1;
  repeated bytes value = 2;
  repeated bytes collated = 3;
}

enum GatewayType {
  exclusive = 0; // Exclusive - When splitting, it routes the sequence flow to exactly one of the outgoing branches. When merging, it awaits one incoming branch to complete before triggering the outgoing flow.
  inclusive = 1; // Inclusive - When splitting, one or more branches are activated. All active incoming branches must complete before merging.
  parallel = 2; // Parralel - When used to split the sequence flow, all outgoing branches are activated simultaneously. When merging parallel branches it waits for all incoming branches to complete before triggering the outgoing flow.
}

enum GatewayDirection {
  divergent = 0;
  convergent = 1;
}


message GatewaySpec {
  GatewayType type = 1;
  GatewayDirection direction = 2;
  string reciprocalId = 3;
  repeated string fixedExpectations = 4;
}

// Timer specifies a timed transition to another state.
message Timer {
  string id = 1; // Id - the unique identifier for the timer.
  string duration = 2; // Duration - the duration of the timer.
  string target = 3; // Target - state machine element ID to transition to.
  map<string, string> outputTransform = 4; // OutputTransform - The transformation to apply to variables during the transition.
}

// Target specifies the target for a state transition.
message Target {
  string id = 1; // Id for the transition.
  repeated string conditions = 2; // Conditions -to apply to the transition specified as Expr.
  string target = 3; // Target ID for the transition.
}

// Error represents a known error name and code which may be thrown by the state machine.
message Error {
  string id = 1; // Id - the unique id for the error.
  string name = 2; // Name - the error unique name.
  string code = 3; // Code - the unique code for the error.
}

// CatchError specifies an error transition to another state.
message CatchError {
  string id = 1; // Id - the unique id.
  string errorId = 2; // Id - the id of the error.
  string target = 3; // Target ID for the transition.
  map<string, string> outputTransform = 4; // OutputTransform - The transformation to apply to variables during the transition.
}

// Targets defines a set of targets for transition and as to whether only the first match should be executed.
message Targets {
  repeated Target target = 1; // Target - the target for a state transition.
}

// WorkflowState describes a current executing state inside a workflow state machine.
message WorkflowState {
  string workflowId = 1; // WorkflowId - the ID of the workflow version that provides the template for execution.
  string workflowInstanceId = 2; // WorkflowInstanceId - the workflow instance that this state belongs to.
  string elementId = 3; // ElementId - the currently executing element withing the workflow state machine.
  string elementType = 4; // ElementType - the currently executing element type, cached here to reduce lookups.
  repeated string id = 5; // Id - a stack of IDs that descibe the state and its parents up to the original workflow instance ID.
  optional string execute = 7; // Execute - additional information required to execute depending on the element type.
  CancellationState state = 8; // State - the current execution state of the state machine.
  optional string condition = 9; // Condition - a message condition that needs to be fulfilled before proceeding.
  int64 unixTimeNano = 10; // UnixTimeNano - the time this state was observed.
  bytes vars = 11; // Vars - A go binary encoded map[string]interface{} of variables.
  repeated string owners = 12; // Owners - a list of user owners for this state that may be responsible for completing tasks
  repeated string groups = 13; // Groups - a list of user groups for this state that may be responsible for completing tasks
  Error error = 14; // Error - an error being carried by the state if it has faulted.
  WorkflowTimer timer = 16; // Timer - a time needed to transition to the next state.
  string workflowName = 17; // WorkflowName - name of this workflow to avoid lookups.
  string processName = 18; // ProcessName - name of this process to avoid lookups.
  string processInstanceId = 19; // ProcessInstanceId - the unique ID for the process instance.
  map<string,SatisfiesGateway> satisfiesGatewayExpectation = 20; // SatisfiesGatewayExpectation - a list of gateways, and pathway covered that satisfy their expectations.
  map<string,GatewayExpectations> gatewayExpectations = 21; // GatewayExpectations - a list of dynamic gateway expectations set during traversing from a divergent gateway with a reciprocal.
}

enum ProcessHistoryType {
  processExecute = 0;
  activityExecute = 1;
  activityComplete =2;
  processSpawnSync = 3;
  processComplete = 4;
  processAbort = 5;
  activityAbort = 6;
}

message ProcessHistoryEntry {
  ProcessHistoryType itemType = 1;
  optional string workflowId = 2;
  optional string workflowInstanceId = 3;
  optional string elementId = 4;
  optional string processInstanceId = 5;
  optional CancellationState cancellationState = 6;
  bytes vars = 7;
  optional WorkflowTimer timer = 8;
  optional Error error = 9;
  int64 unixTimeNano = 10;
  optional string execute = 11;
}

message ProcessHistory {
  repeated ProcessHistoryEntry item = 1;
}

message SatisfiesGateway {
  repeated string instanceTracking = 1; // instanceTracking - a list of paths that satisfy the gateway.
}

message GatewayExpectations {
  repeated string expectedPaths = 1; // ExpectedPaths - a list of paths that compose a gatew's expectaions
}

message Gateway {
  map<string,string> metExpectations = 1; // MetExpectations - a list of expectations that were met for the gateway.
  repeated bytes vars = 2;  // Vars - A go binary encoded map[string]interface{} of variables.
  int64 visits = 3; // Visits - The number of visits this gateway has recieved
}

// WorkflowTimerDefinition defines a workflow timer that can be used to trigger an event.
message WorkflowTimerDefinition {
  WorkflowTimerType type = 1; // Type - whether the workflow timer is relative or absolute.
  int64 value = 2; // Value - the time parameter.
  int64 repeat = 3; // Repeat - the repeat interval for the timer.
  bool dropEvents = 4; // DropEvents - unused.
}

// WorkflowTimer holds the last execution state of a timer.
message WorkflowTimer {
  int64 lastFired = 1; // LastFired - the time in UNIX nanoseconds since the timer was last executed.
  int64 count = 2; // Count - the number of times the timer has fired.
}

// WorkflowTimerType describes whether a timer is relative or absolute
enum WorkflowTimerType {
  duration = 0; // Duration - a relative timer
  fixed = 1; // Fixed - an absolute timer
}

// WorkflowInstance contains all of the metadata for a currently running workflow instance.
message WorkflowInstance {
  string workflowInstanceId = 1; // WorkflowInstanceId - the unique ID for the workflow instance.
  string workflowId = 2; // WorkflowId - the workflow version ID that this instance is executing.
  optional string parentProcessInstanceId = 3; // ParentProcessInstanceId - the parent process instance that launched this process - if nil, the workflow instance launched the process instance.
  optional string parentElementId = 4; // ParentElementId - the ID of the element in the parent process that triggered the launch of this process instance.
  string workflowName = 5; // WorkflowName - name of this workflow to avoid lookups.
  repeated string processInstanceId = 6; // ProcessInstance - process instances berlonging to this workflow instance.
  map<string,bool> satisfiedProcesses = 7; // SatisfiedProcesses - a list of event driven processes that have been completed.
}

message ProcessInstance {
  string processInstanceId = 1; // ProcessInstanceId - the unique ID for the process instance.
  string workflowInstanceId = 2; // WorkflowInstanceId - the workflow instance this process belongs to.
  optional string parentProcessId = 3; // ParentProcessInstanceId - the parent process instance that launched this process - if nil, the workflow instance launched the process instance.
  optional string parentElementId = 4; // ParentElementId - the ID of the element in the parent process that triggered the launch of this process instance.
  string workflowId = 5; // WorkflowId - the workflow version ID that this instance is executing.
  string workflowName = 6; // WorkflowName - name of this workflow to avoid lookups.
  string processName = 7; // ProcessName - name of this process to avoid lookups.
  map<string,bool> gatewayComplete = 8; // GatewayComplete - completed gateway instances register
}

// MessageInstance represents a workflow message.
message MessageInstance {
  string name = 1; // MessageId - the unique messageId for the message.
  string correlationKey = 2; // CorrelationKey - a receiving key to correlate this message to.
  bytes vars = 3; // Vars - A go binary encoded map[string]interface{} of variables.
}

enum RecipientType {
  job = 0;
}

message MessageRecipient {
  RecipientType type = 1;
  string  id = 2;
  string CorrelationKey = 3;
}

message UserTasks {
  repeated string id = 1;
}

message ApiAuthorizationRequest {
  map<string, string> Headers = 1;
  string function = 2;
  string workflowName = 3;
  string user = 4;
}

message ApiAuthorizationResponse {
  bool authorized = 1;
  string userId = 2;
}

message ApiAuthenticationRequest {
  map<string, string> headers = 1;
}

message ApiAuthenticationResponse {
  string user = 1;
  bool Authenticated = 2;
}

message LaunchWorkflowRequest {
  string name = 1;
  bytes vars = 2;
}

message LaunchWorkflowResponse {
  string instanceId = 1;
  string workflowId = 2;
}

enum CancellationState {
  executing = 0;  // CancellationState_executing - the state machine is executing
  completed = 1;  // CancellationState_completed - the state machine has completed successfully
  terminated = 2; // CancellationState_terminated - the state machine instance was terminated
  errored = 3;    // CancellationState_errored - an error occured during state machine execution
  obsolete = 4;   // CancellationState_obsolete - this state is obsolete due to an alternate flow
}

message CancelWorkflowInstanceRequest {
  string id = 1;
  CancellationState state = 2;
  Error error = 3;
}

message ListWorkflowInstanceProcessesRequest {
  string id = 1;
}

message ListWorkflowInstanceProcessesResult {
    repeated string processInstanceId = 1; // ProcessInstance - process instances berlonging to this workflow instance.
}

message GetProcessInstanceStatusRequest {
  string id = 1;
}

message GetProcessInstanceStatusResult {
  repeated WorkflowState processState = 1; // ProcessInstance - process instances berlonging to this workflow instance.
}

message ListWorkflowInstanceRequest {
  string workflowName = 1;
}

message ListWorkflowInstanceResponse {
  repeated ListWorkflowInstanceResult result = 1;
}


message ListWorkflowInstanceResult {
  string id = 1;
  int32 version = 2;
}

message WorkflowInstanceInfo {
  string id = 1;
  string workflowId = 2;
}

message WorkflowInstanceStatus {
  repeated WorkflowState state = 1;
}

message ListWorkflowsResponse {
  repeated ListWorkflowResult result = 1;
}

message ListWorkflowResult {
  string name = 1;
  int32 version = 2;
}

message SendMessageRequest {
  string name = 1;
  string correlationKey = 2;
  bytes vars = 3;
}

message WorkflowInstanceComplete {
  string workflowName = 1;
  string workflowId = 2;
  string workflowInstanceId = 3;
  CancellationState workflowState = 4;
  Error error = 5;
}

message CompleteManualTaskRequest {
  string trackingId = 1;
  bytes vars = 2;
}

message CompleteServiceTaskRequest {
  string trackingId = 1;
  bytes vars = 2;
}

message CompleteSendMessageRequest {
  string trackingId = 1;
  bytes vars = 2;
}

message CompleteUserTaskRequest {
  string trackingId = 1;
  string owner = 2;
  bytes vars = 3;
}

message ListUserTasksRequest {
  string owner = 1;
}

message GetUserTaskRequest {
  string owner = 1;
  string trackingId = 2;
}

//message GetMessageSenderRoutingIdRequest {
//  string workflowName = 1;
//  string messageName = 2;
//}

message GetUserTaskResponse {
  string trackingId = 1;
  string owner = 2;
  string description = 3;
  string name = 4;
  bytes vars = 5;
}

message HandleWorkflowErrorRequest {
  string trackingId = 1;
  string errorCode = 2;
  string message = 3;
  bytes vars = 4;
}

message HandleWorkflowErrorResponse {
  bool handled = 1;
}

message GetWorkflowVersionsRequest {
  string name = 1;
}

message GetWorkflowVersionsResponse {
  WorkflowVersions versions = 1;
}

message GetWorkflowRequest {
  string id = 1;
}

message GetWorkflowResponse {
  Workflow definition = 1;
}

message GetProcessHistoryRequest {
  string Id = 1;
}

message GetProcessHistoryResponse {
  repeated ProcessHistoryEntry entry = 1;
}

message GetServiceTaskRoutingIDRequest {
  string name = 1;
  string requestedId = 2;
}

message GetServiceTaskRoutingIDResponse {
  string id = 1;
}

message WorkflowStats {
  int64 Workflows = 1;
  int64 InstancesStarted = 2;
  int64 InstancesComplete = 3;
}

message TelemetryState {
  WorkflowState state = 1;
  map<int64, TelemetryLogEntry> log = 2;
}

message TelemetryLogEntry {
  string trackingID = 1;
  LogSource source = 2;
  string message = 3;
  int32 code = 4;
  map<string, string> attributes = 5;
}

enum LogSource {
  logSourceEngine = 0;
  logSourceWorkflow = 2;
  logSourceClient = 3;
  logSourceJob = 4;
}

// Task specification
message TaskInfo {
  string id = 1;
  TaskSpec spec = 2;
}


message TaskSpec {

}